--- a/ShellCommand/ShellCommand.csproj
+++ b/ShellCommand/ShellCommand.csproj
@@ -178,6 +178,9 @@
     <None Include=".shellcommand.yaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="global.template.shellcommand.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
